add soft_time
