# cmd/docs/swagger.yaml
@@ -48,23 +48,30 @@ definitions:
     required:
     - shortUrl
     type: object
+  vo.FilterVo:
+    properties:
+      field:
+        description: 字段名
+        type: string
+      operator:
+        type: string
+      value:
+        type: string
+    type: object
   vo.GetVO:
     properties:
-      shortUrl:
-        type: string
-    required:
-    - shortUrl
+      filter:
+        items:
+          $ref: '#/definitions/vo.FilterVo'
+        type: array
     type: object
   vo.SetVo:
     properties:
-      clientId:
-        type: string
       longUrls:
         items:
           type: string
         type: array
     required:
-    - clientId
     - longUrls
     type: object
 info:
@@ -151,7 +158,7 @@ paths:
       tags:
       - 短链接
   /short_url/list:
-    get:
+    post:
       consumes:
       - application/json
       description: 根据client_id获取对应的短链列表
@@ -161,6 +168,12 @@ paths:
         name: client_id
         required: true
         type: string
+      - description: 请求参数
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/vo.GetVO'
       produces:
       - application/json
       responses:
@@ -182,7 +195,7 @@ paths:
       tags:
       - 短链接
   /short_url/set:
-    post:
+    put:
       consumes:
       - application/json
       description: 批量创建短链接，将长链接转换为短链接
