# internal/httpserver/short_url/repo.go
@@ -1,1 +1,0 @@
-package short_url
